<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/summary_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/summary_widget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:text="@string/summary_matches_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_matches_today"
                android:textAlignment="textStart"
                android:layout_weight="1"
                style="1"
                android:layout_gravity="start"
                android:gravity="start" />

            <TextView
                android:id="@+id/no_matches_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="end"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_matches_tomorrow"
                android:textAlignment="textStart"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="start" />

            <TextView
                android:id="@+id/no_matches_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="end"
                android:layout_weight="1" />
        </LinearLayout>



    </LinearLayout>

</FrameLayout>